--- a/src/assets/css/edit/edit.css
+++ b/src/assets/css/edit/edit.css
@@ -75,16 +75,41 @@ font-size: 36px;
     border-bottom: 1px solid #ddd;
     padding-bottom: 10px ;
 }
-.container2 .eMidContainer .eCutImgContainer .eCutSlide{
+
+.container2 .eMidContainer .eCutImgContainer .wrapper-slide{
+    position: relative;
+    /* background-color: red; */
+    height: 250px;
     overflow: hidden;
-    width: 1500px;
-    white-space: nowrap ;
+}
+.container2 .eMidContainer .eCutImgContainer .eCutSlide{
+    /* overflow: hidden; */
+    /* background-color: pink; */
+    /* height: 100%; */
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+    gap: 20px;
+    animation-name: slide;
+    animation-duration: 40s; /* 슬라이드가 한 바퀴 도는 데 걸리는 시간 */
+    animation-timing-function: linear; /* 애니메이션 효과를 일정하게 유지 */
+    animation-iteration-count: infinite; /* 무한 반복 */
+}
+@keyframes slide {
+    0% {
+        transform: translateX(0);
+    }
+    100% {
+        transform: translateX(-100%);
+    }
 }
 .container2 .eMidContainer .eCutImgContainer .eCutSlide img{
     width: 250px;
     height: 250px;
     object-fit: cover;
-    margin-right: 20px;
+    /* margin-right: 20px; */
+}
+.container2 .eMidContainer .eCutImgContainer .eCutSlide img:last-child {
+    margin-right: 0;
 }
 
 /*============= 디자이너 소개 =============*/
