--- a/src/assets/css/potal/searchmap.css
+++ b/src/assets/css/potal/searchmap.css
@@ -15,3 +15,10 @@
     z-index: 999; /* DatePicker가 다른 요소 위에 나타나도록 z-index 설정 */
   }
  
+  #map-search{
+    width: 1150px;
+  }
+
+  .map-cal{
+    display: flex;
+  }
