--- a/src/assets/css/potal/search.css
+++ b/src/assets/css/potal/search.css
@@ -1,3 +1,15 @@
+.close-button {
+  background-color: transparent; /* 배경색 투명으로 설정 */
+  border: none; /* 테두리 제거 */
+  cursor: pointer; /* 마우스 커서를 포인터로 변경 */
+}
+
+.close-button i {
+  font-size: 18px; /* 아이콘 크기 설정 */
+  color: #888; /* 아이콘 색상 설정 */
+  margin-left: 200px;
+}
+
 #potal-search-container {
   width: 1400px;
   margin: 0 auto;
