--- a/src/assets/css/manager/insertTime.css
+++ b/src/assets/css/manager/insertTime.css
@@ -16,6 +16,70 @@
     padding-top: 50px;
     /* background-color: orange; */
 }
+.container4 .calendarContainer .calendar-container2{
+    position: relative;
+    z-index: 1;
+    width: 100%;
+    margin: 20px auto;
+    padding: 20px;
+    border: 5px solid hsl(37, 91%, 67%);
+    border-radius: 20px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    background-color: #fff;
+}
+
+/* FullCalendar의 요일 헤더 스타일링 */
+.container4 .calendarContainer .fc-day-header {
+    background-color: #fff;
+    color: #333;
+    font-weight: bold;
+    border: none;
+}
+
+/* FullCalendar의 이벤트 요소 스타일링 */
+.container4 .calendarContainer .fc-event {
+    background-color: #f8a247;
+    border: none;
+    border-radius: 5px;
+    padding: 4px 8px;
+    font-size: 14px;
+}
+
+/* FullCalendar의 이벤트 텍스트 스타일링 */
+.container4 .calendarContainer .fc-event-title {
+    color: #333;
+    font-weight: bold;
+}
+
+/* FullCalendar의 오늘 날짜 스타일링 */
+.container4 .calendarContainer .fc-day-today {
+    background-color: #f8a247;
+    color: #fff;
+    font-weight: bold;
+}
+
+/* FullCalendar의 버튼 스타일링 */
+.container4 .calendarContainer .fc-button {
+    background-color: #ffd700;
+    color: #333;
+    border: none;
+    border-radius: 5px;
+    padding: 8px 12px;
+    margin: 0 4px;
+    font-size: 14px;
+
+}
+
+/* FullCalendar의 오늘 버튼 스타일링 */
+.container4 .calendarContainer .fc-today-button {
+    background-color: #ffd700;
+    color: #333;
+    border: none;
+    border-radius: 5px;
+    padding: 8px 12px;
+    margin: 0 4px;
+    font-size: 14px;
+}
 
 
 /* ************************* 시간등록 ************************* */
