--- a/src/assets/css/manager/insertTime.css
+++ b/src/assets/css/manager/insertTime.css
@@ -1,24 +1,20 @@
 /* 가게별 시간 등록 페이지 */
-
-.container4{
+.container4 {
     width: 1500px;
     margin: 0 auto;
-    /* background-color: pink; */
-    /* height: 700px; */
     display: flex;
     justify-content: space-between;
     padding: 50px 0;
 }
 
 /* ************************* 달력 ************************* */
-.container4 .calendarContainer{
+.container4 .calendarContainer {
     width: 45%;
     padding-top: 50px;
-    /* background-color: orange; */
 }
-.container4 .calendarContainer .calendar-container2{
+.container4 .calendarContainer .calendar-container2 {
     position: relative;
-    z-index: 1;
+    z-index: 10;
     width: 100%;
     margin: 20px auto;
     padding: 20px;
@@ -81,54 +77,71 @@
     font-size: 14px;
 }
 
-
 /* ************************* 시간등록 ************************* */
-.container4 .timeContainer{
+.container4 .timeContainer {
     width: 45%;
-    /* height: 700px; */
-    /* background-color: olive; */
 }
 
-/* 타이틀 */
-.container4 .timeContainer .timeTop{}
+.container4 .timeContainer .timeTop {}
 
-.container4 .timeContainer .timeTop h1{
+.container4 .timeContainer .timeTop h1 {
     border-bottom: 1px solid #666;
     padding-bottom: 10px;
 }
 
 /* 스케쥴 등록 */
-.container4 .timeContainer .insertScheduleContainer{
+.container4 .timeContainer .insertScheduleContainer {
     padding: 10px;
 }
+
 /* 날짜 선택 */
-.container4 .timeContainer .insertScheduleContainer .selectWorkDate{
+.container4 .timeContainer .insertScheduleContainer .selectWorkDate {
     display: flex;
     justify-content: space-between;
-    /* background-color: teal; */
     padding: 10px 0;
 }
-.container4 .timeContainer .insertScheduleContainer .selectWorkDate .weekAllDayCheck{
+.container4 .timeContainer .insertScheduleContainer .selectWorkDate .weekAllDayCheck {
     display: flex;
 }
-.container4 .timeContainer .insertScheduleContainer .selectWorkDate .weekAllDayCheck p{
+.container4 .timeContainer .insertScheduleContainer .selectWorkDate .weekAllDayCheck p {
     padding-right: 10px;
 }
-.container4 .timeContainer .insertScheduleContainer .selectWorkDate .weekAllDayCheck input{}
 
 /* 시간 선택 */
-.container4 .timeContainer .insertScheduleContainer .selectWorkTimeContainer{
+.container4 .timeContainer .insertScheduleContainer .selectWorkTimeContainer {
     height: 500px;
-    /* background-color: orange; */
+    padding-top: 20px;
+    /* background-color: pink; */
 }
-.container4 .timeContainer .insertScheduleContainer .selectWorkTime{
-    /* background-color: orangered; */
-    padding: 12px 0;
+.container4 .timeContainer .insertScheduleContainer .selectWorkTimeWrapper {
+    display: flex;
+    flex-direction: row; /* 가로로 배치 */
+    justify-content: space-between; /* 두 칼럼 간의 간격 확보 */
+    height: 100%;
+}
+.container4 .timeContainer .insertScheduleContainer .leftColumn,
+.container4 .timeContainer .insertScheduleContainer .rightColumn {
+    display: flex;
+    flex-direction: column;
+    width: 48%; /* 두 칼럼이 나란히 배치되도록 */
+}
+.container4 .timeContainer .insertScheduleContainer .leftColumn{
+    
+}
+.container4 .timeContainer .insertScheduleContainer .selectWorkTime {
     display: flex;
     align-items: center;
     justify-content: center;
 }
-.container4 .timeContainer .insertScheduleContainer .selectWorkTime .selectWorkDay{
+/* 일괄등록 눌렀을때 div간격 조절 */
+.container4 .timeContainer .insertScheduleContainer .selectedTimeContainer .selectWorkTime {
+    margin-bottom: 30px;
+}
+/* 일괄등록 안눌렀을때 div간격 조절*/
+.container4 .timeContainer .insertScheduleContainer .selectedTimeContainer2 .selectWorkTime {
+    margin-bottom: 30px;
+}
+.container4 .timeContainer .insertScheduleContainer .selectWorkTime .selectWorkDay {
     width: 50px;
     height: 50px;
     text-align: center;
@@ -138,14 +151,12 @@
     margin-right: 20px;
 }
 
-
 /* 등록,수정 버튼 */
-.container4 .timeContainer .insertScheduleContainer .insertBtn{
+.container4 .timeContainer .insertScheduleContainer .insertBtn {
     width: 120px;
     height: 50px;
     border: none;
     border-radius: 10px;
     font-size: 18px;
     margin-left: 535px;
-    
 }
