--- a/src/assets/css/manager/insertTime.css
+++ b/src/assets/css/manager/insertTime.css
@@ -53,6 +53,12 @@
     color: #fff;
     font-weight: bold;
 }
+/* FullCalendar의 오늘 날짜 스타일링2 - 다른 날짜가 선택되었을때 */
+.container4 .calendarContainer .fc-day-today-bold-only {
+    font-weight: bold;
+    background-color: transparent;
+    color: initial;
+}
 
 /* FullCalendar의 버튼 스타일링 */
 .container4 .calendarContainer .fc-button {
