--- a/src/assets/css/manager/insertTime.css
+++ b/src/assets/css/manager/insertTime.css
@@ -147,14 +147,10 @@
     align-items: center;
     justify-content: center;
 }
-/* 일괄등록 눌렀을때 div간격 조절 */
 .container4 .timeContainer .insertScheduleContainer .selectedTimeContainer .selectWorkTime {
     margin-bottom: 30px;
 }
-/* 일괄등록 안눌렀을때 div간격 조절*/
-.container4 .timeContainer .insertScheduleContainer .selectedTimeContainer2 .selectWorkTime {
-    margin-bottom: 30px;
-}
+
 .container4 .timeContainer .insertScheduleContainer .selectWorkTime .selectWorkDay {
     width: 50px;
     height: 50px;
@@ -163,6 +159,11 @@
     background-color: #ddd;
     border-radius: 30px;
     margin-right: 20px;
+    transition: background-color 0.3s, color 0.3s;
+}
+.container4 .timeContainer .insertScheduleContainer .selectWorkTime .selectWorkDay.active {
+    background-color: #000; /* 원하는 배경색 */
+    color: #fff; /* 원하는 글자색 */
 }
 
 /* 등록,수정 버튼 */
