--- a/src/assets/css/manager/insertTime.css
+++ b/src/assets/css/manager/insertTime.css
@@ -162,8 +162,9 @@
     transition: background-color 0.3s, color 0.3s;
 }
 .container4 .timeContainer .insertScheduleContainer .selectWorkTime .selectWorkDay.active {
-    background-color: #000; /* 원하는 배경색 */
-    color: #fff; /* 원하는 글자색 */
+    background-color: #237140 ; 
+    color: #fff;
+    font-weight: bold;
 }
 
 /* 등록,수정 버튼 */
