--- a/src/assets/css/manager/insertTime.css
+++ b/src/assets/css/manager/insertTime.css
@@ -102,8 +102,8 @@
     top: 10px !important; 
     right: 10px !important;
     background-color: #f8a247 !important; 
-    border: 2px solid #d45d00 !important; 
-    border-radius: 50% !important; 
+    /* border: 2px solid #d45d00 !important;  */
+    /* border-radius: 50% !important;  */
     color: #fff !important; 
     font-size: 16px !important; 
     width: 30px !important; 
