--- a/src/assets/css/mypage/reserve.css
+++ b/src/assets/css/mypage/reserve.css
@@ -242,54 +242,10 @@
     /* font-weight: bold; */
 }
 
-/* ========= 후기 쓸 폼 ========= */
-.reserveReviewForm{
-    width: 700px;
-    background-color: #fff;
-    margin: 0 auto 30px;
-    padding: 30px;
-    border: 1px solid #237140;
-    border-radius: 10px;
-}
-/* 예약정보 */
-.reserveReviewForm .rrfInfo{
-    margin-bottom: 20px;
-    border-bottom: 1px solid #237140;
-    padding-bottom: 10px;
-}
-.reserveReviewForm .rrfInfo >div{
-    display: flex;
-    margin: 10px 0;
-}
-.reserveReviewForm .rrfInfo >div p:first-child{
-    color: #237140;
-    width: 90px;
-    font-weight: bold;
-}
 
-/* 결제금액 확인 */
-.reserveReviewForm .rrfSum{
-    margin-bottom: 20px;
-}
-.reserveReviewForm .rrfSum >div{
-    display: flex;
-    justify-content: space-between;
-    margin: 10px 0;
-}
-.reserveReviewForm .rrfSum >div:nth-child(2){
-    border-bottom: 1px solid #ddd;
-    padding-bottom: 15px;
-}
-.reserveReviewForm .rrfSum >div p{
-    font-size: 17px;
-    font-weight: bold;
-}
 
 /* 후기 작성버튼 */
-.reserveReviewForm .rrfChange{
-    /* background-color: palegreen; */
-}
-.reserveReviewForm .rrfChange >a{
+.reserveCheckForm .rrfChange >a{
     display: block;
     margin: 0 auto;
     padding: 15px 0;
@@ -308,54 +264,10 @@
     border: 1px solid #237140;
 }
 
-/* ========= 후기 보기 폼 ========= */
-.reserveReviewConfirmForm{
-    width: 700px;
-    background-color: #fff;
-    margin: 0 auto 30px;
-    padding: 30px;
-    border: 1px solid #237140;
-    border-radius: 10px;
-}
-/* 예약정보 */
-.reserveReviewConfirmForm .rrfcInfo{
-    margin-bottom: 20px;
-    border-bottom: 1px solid #237140;
-    padding-bottom: 10px;
-}
-.reserveReviewConfirmForm .rrfcInfo >div{
-    display: flex;
-    margin: 10px 0;
-}
-.reserveReviewConfirmForm .rrfcInfo >div p:first-child{
-    color: #237140;
-    font-weight: bold;
-    width: 90px;
-}
 
-/* 결제금액 확인 */
-.reserveReviewConfirmForm .rrfcSum{
-    margin-bottom: 20px;
-}
-.reserveReviewConfirmForm .rrfcSum >div{
-    display: flex;
-    justify-content: space-between;
-    margin: 10px 0;
-}
-.reserveReviewConfirmForm .rrfcSum >div:nth-child(2){
-    border-bottom: 1px solid #ddd;
-    padding-bottom: 15px;
-}
-.reserveReviewConfirmForm .rrfcSum >div p{
-    font-size: 17px;
-    font-weight: bold;
-}
 
 /* 후기 작성버튼 */
-.reserveReviewConfirmForm .rrfConfirm{
-    /* background-color: palegreen; */
-}
-.reserveReviewConfirmForm .rrfConfirm >a{
+.reserveCheckForm .rrfConfirm >a{
     display: block;
     margin: 0 auto;
     border: 1px solid #237140;
@@ -368,7 +280,7 @@
     font-weight: bold;
     text-align: center;
 }
-.reserveReviewConfirmForm .rrfConfirm >a:hover{
+.reserveCheckForm .rrfConfirm >a:hover{
     color: #fff;
     background-color: #237140;
     font-weight: bold;
